@startuml it_polimi_ingsw_common_game
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.common.game

class AdventureCardIdentity <<record>> {
}
enum AdventureCardType {
  +inTestFlight() : boolean
}
enum AlienColor {
  -lifeSupport : ComponentKind
  --
  +lifeSupport() : ComponentKind
  +supportedBy() : AlienColor
}
class BatteryPlan <<record>> {
  +none() : BatteryPlan
  +powering() : BatteryPlan
  +cost() : int
  +powers() : boolean
}
enum CardLevel {
}
enum ComponentKind {
  +hasCapacity() : boolean
  +isCabin() : boolean
  +isLifeSupport() : boolean
  +isCannon() : boolean
  +isEngine() : boolean
  +consumesCharge() : boolean
}
enum Connector {
  +joinsTo() : boolean
  +isConnector() : boolean
}
class DamageReport <<record>> {
  +targetIfAny() : Optional<Position>
  +destroyedIfAny() : Optional<Position>
  +shipIsIntact() : boolean
  +brokeUp() : boolean
}
enum Outcome {
}
enum Direction {
  +opposite() : Direction
  +clockwise() : Direction
  +rotatedBy() : Direction
  +addressesColumn() : boolean
}
enum GameLevel {
}
enum GamePhase {
}
enum GoodColor {
  +requiresSpecialHold() : boolean
}
class Hit <<record>> {
}
enum HitKind {
  +stoppableByShield() : boolean
  +stoppableByCannon() : boolean
  +bouncesOffSmoothSides() : boolean
}
interface PlayerChoice {
  +player() : PlayerColor
}
class Take <<record>> {
}
class Leave <<record>> {
}
class Declaration <<record>> {
}
class Done <<record>> {
}
class CrewGiven <<record>> {
}
class DefenceChosen <<record>> {
}
class FragmentKept <<record>> {
}
class CargoStowed <<record>> {
}
enum Stowing {
}
class PlanetChosen <<record>> {
}
enum PlayerColor {
}
interface PlayerPrompt {
  +player() : PlayerColor
  +passiveAnswer() : PlayerChoice
  +describePassing() : String
  +accepts() : boolean
}
class TakeOrLeave <<record>> {
}
class DeclarePower <<record>> {
}
class ArrangeCargo <<record>> {
}
class GiveUpCrew <<record>> {
}
class ChooseDefence <<record>> {
}
class ChooseFragment <<record>> {
}
class ChoosePlanet <<record>> {
}
class Position <<record>> {
  +neighbour() : Position
}
enum Rotation {
  -quarterTurns : int
  --
  +quarterTurns() : int
  +inverse() : Rotation
}
class ScoreSheet <<record>> {
  +total() : int
  +isProfitable() : boolean
}
enum ShipAttribute {
}
class ShipAttributes <<record>> {
  +firepower() : double
}
class ShipViolation <<record>> {
}
class ValidationReport <<record>> {
  +legal() : ValidationReport
  +isLegal() : boolean
  +offendingCells() : Set<Position>
  +hasViolationOf() : boolean
}
enum ViolationKind {
}

PlayerChoice <|.. Take
PlayerChoice <|.. Leave
PlayerChoice <|.. Declaration
PlayerChoice <|.. Done
PlayerChoice <|.. CrewGiven
PlayerChoice <|.. DefenceChosen
PlayerChoice <|.. FragmentKept
PlayerChoice <|.. CargoStowed
PlayerChoice <|.. PlanetChosen
PlayerPrompt <|.. TakeOrLeave
PlayerPrompt <|.. DeclarePower
PlayerPrompt <|.. ArrangeCargo
PlayerPrompt <|.. GiveUpCrew
PlayerPrompt <|.. ChooseDefence
PlayerPrompt <|.. ChooseFragment
PlayerPrompt <|.. ChoosePlanet
@enduml
